WIP updating fasDPD